// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch> renders 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "height": 39,
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <RCTSwitch
    activeThumbColor="#bdbdbd"
    activeTrackColor="#e0e0e0"
    disabled={false}
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "height": 24,
          "marginRight": 10,
        },
      ]
    }
    value={false}
  />
</View>
`;

exports[`<Switch> when {color} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "height": 39,
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <RCTSwitch
    activeThumbColor="green"
    activeTrackColor="#e0e0e0"
    disabled={false}
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "height": 24,
          "marginRight": 10,
        },
      ]
    }
    value={true}
  />
</View>
`;

exports[`<Switch> when {disabled} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "height": 39,
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <RCTSwitch
    activeThumbColor="#bdbdbd"
    activeTrackColor="#e0e0e0"
    disabled={false}
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "height": 24,
          "marginRight": 10,
        },
      ]
    }
    value={false}
    visible={true}
  />
</View>
`;

exports[`<Switch> when {label} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "height": 39,
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <RCTSwitch
    activeThumbColor="#bdbdbd"
    activeTrackColor="#e0e0e0"
    disabled={false}
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "height": 24,
          "marginRight": 10,
        },
      ]
    }
    value={false}
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontSize": 14,
            "lineHeight": 24,
          },
          Object {
            "color": "#9b9b9b",
          },
          Object {},
        ]
      }
    >
      Hello world
    </Text>
  </View>
</View>
`;

exports[`<Switch> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "height": 39,
        "marginBottom": 10,
      },
      Object {
        "backgroundColor": "orange",
      },
    ]
  }
>
  <RCTSwitch
    activeThumbColor="#bdbdbd"
    activeTrackColor="#e0e0e0"
    disabled={false}
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "height": 24,
          "marginRight": 10,
        },
      ]
    }
    value={false}
  />
</View>
`;
